# FourSix

./: .gitignore  CMakeLists.txt  README.md
src/: config_cgal.hpp  configuration.hpp  main.cpp
src/data/: data.cpp  data.hpp  data_in.cpp  data_in.hpp  data_out.cpp  data_out.hpp
src/helper/: helper.cpp  helper.hpp
src/json/: json.cpp  json.hpp
src/obtuse_polygon/: obtuse_polygon.cpp  obtuse_polygon.hpp
src/optimization_methods/: ant_colony.cpp  local_search.cpp  mixed_recursive.cpp  simulated_annealing.cpp
src/triangulation/: triangulation.cpp  triangulation.hpp
test/: all.sh  ant.sh  autodetect.sh  default.sh  find_and_replace.sh  l_search.sh  projection_long_loop.sh  s_anneal.sh
test/ant/challenge_instances_cgshop25_rev1/challenge_instances_cgshop25/: ortho_100_bd1e4a14.instance.json  ortho_10_d2723dcc.instance.json  ortho_150_53eb4022.instance.json  ortho_20_5a9e8244.instance.json  ortho_20_e2aff192.instance.json  ortho_250_3b977f7e.instance.json  ortho_250_6e6a66c2.instance.json  ortho_40_56a6f463.instance.json  ortho_40_df58ce3b.instance.json  ortho_60_5c5796a0.instance.json  ortho_60_c423f527.instance.json  ortho_60_f744490d.instance.json  ortho_80_06ee55d4.instance.json  point-set_100_0245ce31.instance.json  point-set_100_05594822.instance.json  point-set_100_dd67678e.instance.json  point-set_10_13860916.instance.json  point-set_10_4bcb7c21.instance.json  point-set_10_7451a2a9.instance.json  point-set_10_97578aae.instance.json  point-set_10_ae0fff93.instance.json  (+129 more)
test/ant/examples/: simple_polygon_with_exterior_20_080.json
test/ant/my/: arrow1.json  nested_squares1.json  nested_triangles1.json  outside_boundary1.json  outside_boundary2.json  projection.json  triangle1.json
test/autodetect/examples/: simple_polygon_with_exterior_20_080.json
test/autodetect/my/: arrow1.json  nested_squares1.json  nested_triangles1.json  outside_boundary1.json  outside_boundary2.json  projection.json  triangle1.json
test/default/examples/: simple_polygon_with_exterior_20_080.json
test/default/my/: nested_squares1.json  nested_triangles1.json  projection.json
test/examples/1/: out.json
test/examples/2/: in.json
test/examples/3/: in.json
test/l_search/examples/: simple_polygon_with_exterior_20_080.json
test/l_search/my/: arrow1.json  outside_boundary1.json  outside_boundary2.json  projection.json  triangle1.json
test/my/3/: in.json
test/my/4/: in.json
test/s_anneal/examples/: simple_polygon_with_exterior_20_080.json
test/s_anneal/my/: arrow1.json  outside_boundary1.json  outside_boundary2.json  projection.json  triangle1.json
(+704 files in other folders)
